gc analysis